--- a/.github/workflows/iss-location.yml
+++ b/.github/workflows/iss-location.yml
@@ -1,41 +1,40 @@
-name: Log ISS Location Data Daily
+name: Daily Commit
 
+# Trigger this workflow at 2:30 PM UTC every day
 on:
   schedule:
-    # Runs at 10:57 UTC (morning) every day
-    - cron: "57 10 * * *"
-  workflow_dispatch: # Allows manual triggering
+    - cron: '25 18 * * *'
 
 jobs:
-  collect-iss-data:
+  commit_changes:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
-      - name: 23f2005217@ds.study.iitm.ac.in
-        run: echo "I am Girish"
-        
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    # Step 1: Check out the repository
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
+    # Step 2: Set up Git configuration
+    - name: Set up Git
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "23f2005217@ds.study.iitm.ac.in"  # Change this if needed
 
-      - name: Fetch ISS location data
-        run: | # python
-          uv run --with requests python << 'EOF'
-          import requests
+    # Step 3: Add changes (ensure you have something to commit)
+    - name: Make changes or ensure files are updated
+      run: |
+        # Example: touch a file to ensure changes are detected
+        echo "Automated update at $(date)" >> daily_log.txt
+        git add .
 
-          data = requests.get('http://api.open-notify.org/iss-now.json').text
-          with open('iss-location.jsonl', 'a') as f:
-              f.write(data + '\n')
-          'EOF'
+    # Step 4: Commit the changes with your email in the message
+    - name: Commit changes
+      run: |
+        git commit -m "Automated commit by 23f2005217@ds.study.iitm.ac.in"
 
-      - name: Commit and push changes
-        run: | # shell
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add iss-location.jsonl
-          git commit -m "Update ISS position data [skip ci]" || exit 0
-          git push
+    # Step 5: Push the changes back to the repository
+    - name: Push changes
+      run: |
+        git push origin main  # Ensure you are pushing to the correct branch
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the GitHub token to authenticate the push
